--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,12 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
-      crossorigin="anonymous"
-    />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Contact</title>
   </head>
   <body>
@@ -25,10 +20,12 @@
       </ul>
     </nav>
     <div class="container mt-5">
-      <h1>Contac</h1>
+      <h1>Contact</h1>
    <p><a href="mailto:annamatyjewicz@gmail.com">Napisz do mnie</a><br>
-A numeru telefonu nie podam, bo nie chcę dostawać spamu :)
-</p>
+A numeru telefonu nie podam, bo nie chcę dostawać spamu :)</p>
+
+<p><a href="https://github.com/Astghik1319">Kliknij tutaj</a>, żeby przejść do mojego GitHuba</p>
+<p><a href="../lab/templates/login.html">Kliknij tutaj</a>, aby przejść do sekcji logowania i zostawić swoją opinię</p>
     </div>
   </body>
 </html>
