--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
-      crossorigin="anonymous"
-    />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
     <title>PiaC Portfolio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
   </head>
+  
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <ul class="navbar-nav mr-auto">
@@ -24,10 +20,35 @@
         <li class="nav-item"><a href="{{ url_for('contact') }}" class="nav-link">Contact</a></li>
       </ul>
     </nav>
-    <div class="container mt-5">
-      <h1>Anna Matyjewicz</h1>
-      <h2>Strona - portfolio</h2>
-	  <h5>Projekt stworzony na przedmiot Programowanie i architektura aplikacji w Chmurze</h5>
-    </div>
+	<div class="carousel-item">
+  <img src="../static/back01.jpg" alt="...">
+  <div class="carousel-caption d-none d-md-block">
+    <h5>Anna Matyjewicz</h5>
+    <p>Strona - portfolio</p>
+  </div>
+</div>
+<div class="carousel-item">
+  <img src="../static/back02.jpg" alt="...">
+  <div class="carousel-caption d-none d-md-block">
+    <h5>O mnie</h5>
+    <p><a href="{{ url_for('aboutme') }}" class="nav-link">About me</a></p>
+  </div>
+</div>
+<div class="carousel-item">
+  <img src="../static/back03.jpg" alt="...">
+  <div class="carousel-caption d-none d-md-block">
+    <h5>Galeria</h5>
+    <p><a href="{{ url_for('gallery') }}" class="nav-link">Gallery</a></p>
+  </div>
+</div>
+<div class="carousel-item">
+  <img src="../static/back04.jpg" alt="...">
+  <div class="carousel-capton d-none d-md-block">
+    <h5>Kontakt</h5>
+    <p><a href="{{ url_for('contact') }}" class="nav-link">Contact</a></p>
+  </div>
+</div>
+<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
   </body>
 </html>
