--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,23 +9,58 @@
     <title>Contact</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a href="{{ url_for('home') }}" class="nav-link">Home</a></li>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Nawigacja</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="{{ url_for('aboutme') }}" class="nav-link">About me</a>
+          <a class="nav-link active" aria-current="page" href="../templates/index.html">Home</a>
         </li>
-        <li class="nav-item"><a href="{{ url_for('gallery') }}" class="nav-link">Gallery</a></li>
-        <li class="nav-item active"><a href="{{ url_for('contact') }}" class="nav-link">Contact</a></li>
+		 <li class="nav-item">
+          <a class="nav-link" href="../static/about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../templates/gallery.html">Gallery</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../templates/contact.html">Contact</a>
+        </li>
       </ul>
-    </nav>
+    </div>
+  </div>
+</nav>
     <div class="container mt-5">
       <h1>Contact</h1>
    <p><a href="mailto:annamatyjewicz@gmail.com">Napisz do mnie</a><br>
 A numeru telefonu nie podam, bo nie chcę dostawać spamu :)</p>
 
 <p><a href="https://github.com/Astghik1319">Kliknij tutaj</a>, żeby przejść do mojego GitHuba</p>
-<p><a href="../lab/templates/login.html">Kliknij tutaj</a>, aby przejść do sekcji logowania i zostawić swoją opinię</p>
+<p><a href="../lab/templates/login.html">Kliknij tutaj</a>, aby przejść do Księgi Gości</p>
+    </div>
+<div class="container">
+        <div class="jumbotron">
+            <h1>Wyślij wiadomość</h1>
+            <p>Napisz do mnie!</p>
+        </div>
+        <form action="/api/send_mail" method="post">
+		<div class="form-group">
+                <label for="InputNickname">Nick</label>
+                <input type="email" class="form-control" name="nick" placeholder="Podaj swój nick" required>
+            </div>
+            <div class="form-group">
+                <label for="InputEmail">Email</label>
+                <input type="email" class="form-control" name="email" placeholder="Podaj adres email" required>
+            </div>
+			<div class="form-group">
+                <label for="InputMess">Wiadomość</label>
+                <input type="email" class="form-control" name="email" placeholder="Podaj treść wiadomości" required>
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
     </div>
   </body>
 </html>
