--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -15,16 +15,30 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a href="{{ url_for('home') }}" class="nav-link">Home</a></li>
-        <li class="nav-item active">
-          <a href="{{ url_for('aboutme') }}" class="nav-link">About me</a>
+ <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Nawigacja</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="../templates/index.html">Home</a>
         </li>
-        <li class="nav-item"><a href="{{ url_for('gallery') }}" class="nav-link">Gallery</a></li>
-        <li class="nav-item"><a href="{{ url_for('contact') }}" class="nav-link">Contact</a></li>
+		 <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('aboutme') }}">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('gallery') }}">Gallery</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
+        </li>
       </ul>
-    </nav>
+    </div>
+  </div>
+</nav>
     <div class="container mt-5">
       <h3>About</h3>
       <p>Hej jestem Ania. I tutaj kończy się moja inwencja twórcza jeśli chodzi o autoprezentację.</p>
