--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -27,7 +27,7 @@
   </head>
 
   <body>
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Nawigacja</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,13 +39,13 @@
           <a class="nav-link active" aria-current="page" href="../templates/index.html">Home</a>
         </li>
 		 <li class="nav-item">
-          <a class="nav-link" href="../static/about.html">About</a>
+          <a class="nav-link" href="{{ url_for('aboutme') }}">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../templates/gallery.html">Gallery</a>
+          <a class="nav-link" href="{{ url_for('gallery') }}">Gallery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../templates/contact.html">Contact</a>
+          <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
         </li>
       </ul>
     </div>
