--- a/templates/index.html
+++ b/templates/index.html
@@ -33,13 +33,13 @@ crossorigin="anonymous"></script>
           <a class="nav-link active" aria-current="page" href="../templates/index.html">Home</a>
         </li>
 		 <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('aboutme') }}">About</a>
+          <a class="nav-link" href="../templates/aboutme.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('gallery') }}">Gallery</a>
+          <a class="nav-link" href="../templates/gallery.html">Gallery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
+          <a class="nav-link" href="../templates/contact.html">Contact</a>
         </li>
       </ul>
     </div>
