--- a/templates/index.html
+++ b/templates/index.html
@@ -1,34 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
- <ol class="carousel-indicators">
- <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
- <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
- <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
- </ol>
- <div class="carousel-inner">
- <div class="carousel-item active">
- <img class="d-block w-100" src="static/back01.jpg" height="500px" alt="First slide">
- </div>
- <div class="carousel-item">
- <img class="d-block w-100" src="static/back02.jpg" height="500px" alt="Second slide">
- </div>
- <div class="carousel-item">
- <img class="d-block w-100" src="static/back03.jpg" height="500px" alt="Third slide">
- </div>
- </div>
- </div>
- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" dataslide="prev">
- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
- <span class="sr-only">Previous</span>
- </a>
- <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" dataslide="next">
- <span class="carousel-control-next-icon" aria-hidden="true"></span>
- <span class="sr-only">Next</span>
- </a>
-</div>
-<div class="container">
- <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center"> <h1 class="display-4">Anna Matyjewicz - portfolio</h1>
+ <h1 class="display-4">Anna Matyjewicz - portfolio</h1>
  <p class="lead">Strona wykonana jako projekt na studiach, na przedmiot Programowanie i architektura aplikacji w Chmurze.</p>
- </div>
+
 {% endblock content %}
