--- a/templates/index.html
+++ b/templates/index.html
@@ -30,16 +30,16 @@ crossorigin="anonymous"></script>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="templates/index.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="../templates/index.html">Home</a>
         </li>
 		 <li class="nav-item">
-          <a class="nav-link" href="templates/aboutme.html">About</a>
+          <a class="nav-link" href="../templates/aboutme.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="templates/gallery.html">Gallery</a>
+          <a class="nav-link" href="../templates/gallery.html">Gallery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="templates/contact.html">Contact</a>
+          <a class="nav-link" href="../templates/contact.html">Contact</a>
         </li>
       </ul>
     </div>
