--- a/templates/login.html
+++ b/templates/login.html
@@ -43,12 +43,38 @@ crossorigin="anonymous"></script>
   </div>
 </nav>
 <div>
-    <form method="post">
+    <!--<form method="post">
 	<h3>Dodaj wpis do Księgi Gości</h3>
       <label>Nick: </label><input type="text" name="nickname" /><br />
       <label>Tekst: </label><input type="text" name="text" /><br />
 	  <label>Data dodania: </label><input type="datetime" name="datetime" /><br />
-      <input type="submit" />
+      <input type="submit" /> -->
+	     <form action="/addcomment" method="GET">
+        <input class="btn btn-primary" type="submit" value="Dodaj wpis">
+    </form>
+    
+        {% for result in data %}
+            <div class="alert alert-primary" style="margin-top: 30px">
+                <div class="content">
+                    <span class="authour">{{result.name}}</span>
+                    <div class="metadata">
+                        <span class="date">{{result.date}}</span>
+                    </div>
+                    <div class="text">{{result.text}}</div>
+                </div>
+
+                <form action="/edit" method="POST" style="display: inline-block">
+                    <input type="hidden" name="id" value="{{result.id}}">
+                    <input type="submit" value="Edytuj" class="btn btn-secondary">
+                </form>
+                <form action="/delete" method="POST" style="display: inline-block">
+                    <input type="hidden" name="id" value="{{result.id}}">
+                    <input type="submit" value="Usuń" class="btn btn-danger">
+                </form>
+            </div>
+        {% else %}
+            <p>Brak wpisów </p>
+        {% endfor %}
     </form>
 	</div>
 	<div>
