--- a/templates/index.html
+++ b/templates/index.html
@@ -48,13 +48,13 @@
  </ol>
  <div class="carousel-inner">
  <div class="carousel-item active">
- <img class="d-block w-100" src="static/back01.jpg" height="500px" alt="First slide">
+ <img class="d-block w-100" src="../static/back01.jpg" height="500px" alt="First slide">
  </div>
  <div class="carousel-item">
- <img class="d-block w-100" src="static/back02.jpg" height="500px" alt="Second slide">
+ <img class="d-block w-100" src="../static/back02.jpg" height="500px" alt="Second slide">
  </div>
  <div class="carousel-item">
- <img class="d-block w-100" src="static/back03.jpg" height="500px" alt="Third slide">
+ <img class="d-block w-100" src="../static/back03.jpg" height="500px" alt="Third slide">
  </div>
  </div>
  </div>
