--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -30,24 +30,17 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Nawigacja</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="templates/index.html">Home</a>
-        </li>
-		 <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('aboutme') }}">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('gallery') }}">Gallery</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
-        </li>
-      </ul>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="../templates/index.html">Home</a>
+        <a class="nav-link" href="../templates/aboutme.html">About</a>
+        <a class="nav-link" href="../templates/gallery.html">Gallery</a>
+        <a class="nav-link" href="../templates/contact.html">Contact</a>
+        <a class="nav-link" href="../templates/guestbook.html">Guestbook</a>
+      </div>
     </div>
   </div>
 </nav>
