--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -27,23 +27,19 @@
   </head>
 
   <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Nawigacja</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="../templates/index.html">Home</a>
-        <a class="nav-link" href="../templates/aboutme.html">About</a>
-        <a class="nav-link" href="../templates/gallery.html">Gallery</a>
-        <a class="nav-link" href="../templates/contact.html">Contact</a>
-        <a class="nav-link" href="../templates/guestbook.html">Guestbook</a>
-      </div>
-    </div>
-  </div>
-</nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light  ">
+  <a class="navbar-brand" href="{{ url_for('home') }}">SUPER STRONKA</a>
+    <ul class="navbar-nav mr-auto ">
+      <li class="nav-item active"><a href="#" class="nav-link">Home</a></li>
+      <li class="nav-item">
+        <a href="{{ url_for('aboutme') }}" class="nav-link">About me</a>
+      </li>
+      <li class="nav-item"><a href="{{ url_for('aboutme') }}" class="nav-link">About</a></li>
+      <li class="nav-item"><a href="{{ url_for('gallery') }}" class="nav-link">Gallery</a></li>
+      <li class="nav-item"><a href="{{ url_for('contact') }}" class="nav-link">Contact</a></li>
+      <li class="nav-item"><a href="{{url_for('guestbook')}}" class="nav-link">Guestbook</a></li>
+    </ul>
+  </nav>
     <div class="container">
       <div class="img-container mt-5">
 	  <a href="../static/cat.jpg" class="data-toggle="lightbox"  data-gallery="gallery">
