--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -35,6 +35,10 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
         </li>
+		 </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('login') }}">Guestbook</a>
+        </li>
       </ul>
     </div>
   </div>
