--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
       <li class="nav-item"><a href="{{ url_for('aboutme') }}" class="nav-link">About</a></li>
       <li class="nav-item"><a href="{{ url_for('gallery') }}" class="nav-link">Gallery</a></li>
       <li class="nav-item"><a href="{{ url_for('contact') }}" class="nav-link">Contact</a></li>
-      <li class="nav-item"><a href="{{url_for('guestbook')}}" class="nav-link">Guestbook</a></li>
+      <li class="nav-item"><a href="{{url_for('login')}}" class="nav-link">Guestbook</a></li>
     </ul>
   </nav>
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
